<resources>
    <string name="app_name">pump</string>
    <string name="lastUpdated">Last Updated</string>
    <string name="Currency">Currency</string>
    <string name="value">Value</string>
    <string name="search">Search</string>
    <string name="USDT">USDT</string>
    <string name="Bitcoin">Bitcoin</string>
    <string name="Ethereum">Ethereum</string>
    <string name="Refresh">Refresh</string>
</resources>