<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastUpdated"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" />

    <TextView
        android:id="@+id/mDate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastUpdated"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <TextView
        android:id="@+id/mCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Currency"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321" />

    <TextView
        android:id="@+id/mValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rdoGroup"
        android:layout_width="178dp"
        android:layout_height="148dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704">

        <RadioButton
            android:id="@+id/rBTC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Bitcoin" />

        <RadioButton
            android:id="@+id/rUSDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/USDT" />

        <RadioButton
            android:id="@+id/rETH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ethereum" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>